// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDetails Components renders TransactionDetailsContent without error 1`] = `
<View
  style={
    {
      "flexDirection": "column",
    }
  }
>
  <View
    cancelable={true}
    disabled={false}
    focusable={true}
    hitSlop={[Function]}
    minPressDuration={0}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "flexDirection": "column",
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "gap": 8,
          "justifyContent": "center",
          "paddingBottom": 32,
          "paddingLeft": 32,
          "paddingRight": 32,
          "paddingTop": 32,
        }
      }
    >
      <Text
        allowFontScaling={false}
        maxFontSizeMultiplier={1.2}
        style={
          {
            "color": "#222222",
            "fontFamily": "Basel-Book",
            "fontSize": 24,
            "lineHeight": 32,
          }
        }
        suppressHighlighting={true}
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.4}
          style={
            {
              "color": "#7D7D7D",
              "fontFamily": "Basel-Book",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
          suppressHighlighting={true}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionDetails Components renders TransactionDetailsHeader without error 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "column",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      >
        <View
          style={
            {
              "bottom": -4,
              "flexDirection": "column",
              "position": "absolute",
              "right": -4,
            }
          }
        >
          <View
            style={
              {
                "borderBottomColor": "#FFFFFF",
                "borderBottomLeftRadius": 7,
                "borderBottomRightRadius": 7,
                "borderBottomWidth": 2,
                "borderLeftColor": "#FFFFFF",
                "borderLeftWidth": 2,
                "borderRightColor": "#FFFFFF",
                "borderRightWidth": 2,
                "borderStyle": "solid",
                "borderTopColor": "#FFFFFF",
                "borderTopLeftRadius": 7,
                "borderTopRightRadius": 7,
                "borderTopWidth": 2,
                "flexDirection": "column",
              }
            }
          >
            <View
              style={
                {
                  "borderColor": "#FFFFFF",
                  "borderRadius": 6,
                  "flexDirection": "column",
                  "overflow": "hidden",
                }
              }
              testID="network-logo"
            >
              <div
                className="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                dir={null}
                style={
                  {
                    "height": "16px",
                    "width": "16px",
                  }
                }
              >
                <div
                  className="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
                  dir={null}
                  suppressHydrationWarning={true}
                />
              </div>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
            "justifyContent": "flex-start",
          }
        }
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.4}
          style={
            {
              "color": "#222222",
              "fontFamily": "Basel-Book",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
          suppressHighlighting={true}
        >
          Approved
        </Text>
      </View>
      <Text
        allowFontScaling={false}
        maxFontSizeMultiplier={1.4}
        style={
          {
            "color": "#7D7D7D",
            "fontFamily": "Basel-Book",
            "fontSize": 12,
            "lineHeight": 16,
          }
        }
        suppressHighlighting={true}
      >
        January 1, 2023 12:00 AM
      </Text>
    </View>
  </View>
  <View
    cancelable={true}
    disabled={false}
    focusable={true}
    hitSlop={[Function]}
    minPressDuration={0}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "flexDirection": "column",
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="20"
      bbWidth="20"
      fill="currentColor"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="currentColor"
      strokeWidth={8}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "color": "#7D7D7D",
            "height": 20,
            "width": 20,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      tintColor="#7D7D7D"
      vbHeight={4}
      vbWidth={18}
    >
      <RNSVGGroup
        fill={
          {
            "type": 2,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        stroke={
          {
            "type": 2,
          }
        }
        strokeWidth="8"
      >
        <RNSVGPath
          d="M9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth="2"
        />
        <RNSVGPath
          d="M16 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth="2"
        />
        <RNSVGPath
          d="M2 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth="2"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`TransactionDetails Components renders TransactionDetailsInfoRows without error 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 8,
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.4}
      style={
        {
          "color": "#7D7D7D",
          "fontFamily": "Basel-Book",
          "fontSize": 14,
          "lineHeight": 20,
        }
      }
      suppressHighlighting={true}
    >
      Network cost
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          {
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "flexDirection": "column",
            "overflow": "hidden",
          }
        }
        testID="network-logo"
      >
        <div
          className="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
          dir={null}
          style={
            {
              "height": "16px",
              "width": "16px",
            }
          }
        >
          <div
            className="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
            dir={null}
            suppressHydrationWarning={true}
          />
        </div>
      </View>
      <Text
        allowFontScaling={false}
        maxFontSizeMultiplier={1.4}
        style={
          {
            "color": "#222222",
            "fontFamily": "Basel-Book",
            "fontSize": 14,
            "lineHeight": 20,
          }
        }
        suppressHighlighting={true}
      >
        -
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.4}
      style={
        {
          "color": "#7D7D7D",
          "fontFamily": "Basel-Book",
          "fontSize": 14,
          "lineHeight": 20,
        }
      }
      suppressHighlighting={true}
    >
      Transaction ID
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        maxFontSizeMultiplier={1.4}
        style={
          {
            "color": "#222222",
            "fontFamily": "Basel-Book",
            "fontSize": 14,
            "lineHeight": 20,
          }
        }
        suppressHighlighting={true}
      >
        b568a9...0600
      </Text>
      <View
        cancelable={true}
        disabled={false}
        focusable={true}
        hitSlop={[Function]}
        minPressDuration={0}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "flexDirection": "column",
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="16"
          bbWidth="16"
          fill="none"
          focusable={false}
          meetOrSlice={0}
          minX={0}
          minY={0}
          strokeWidth={8}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "color": "#CECECE",
                "height": 16,
                "width": 16,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          tintColor="#CECECE"
          vbHeight={16}
          vbWidth={16}
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "strokeWidth",
              ]
            }
            strokeWidth="8"
          >
            <RNSVGPath
              d="M12.25 4.16667H6.41667C4.96533 4.16667 4.16667 4.96533 4.16667 6.41667V12.25C4.16667 13.7013 4.96533 14.5 6.41667 14.5H12.25C13.7013 14.5 14.5 13.7013 14.5 12.25V6.41667C14.5 4.96533 13.7013 4.16667 12.25 4.16667ZM13.5 12.25C13.5 13.138 13.138 13.5 12.25 13.5H6.41667C5.52867 13.5 5.16667 13.138 5.16667 12.25V6.41667C5.16667 5.52867 5.52867 5.16667 6.41667 5.16667H12.25C13.138 5.16667 13.5 5.52867 13.5 6.41667V12.25ZM2.5 3.74666V9.58667C2.5 10.3853 2.82206 10.582 2.92806 10.6473C3.16406 10.7913 3.23726 11.0993 3.09326 11.3347C2.9986 11.4887 2.83468 11.5733 2.66602 11.5733C2.57735 11.5733 2.48661 11.5493 2.40527 11.5C1.80461 11.132 1.5 10.4887 1.5 9.58667V3.74666C1.5 2.31866 2.31941 1.5 3.74674 1.5H9.58659C10.7099 1.5 11.2467 1.99265 11.5 2.40531C11.644 2.64065 11.57 2.94865 11.3346 3.09265C11.0986 3.23732 10.792 3.16266 10.6473 2.92733C10.5826 2.82133 10.3853 2.49935 9.58659 2.49935H3.74674C2.86141 2.50002 2.5 2.86133 2.5 3.74666Z"
              fill={
                {
                  "type": 2,
                }
              }
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                ]
              }
              stroke={
                {
                  "type": 2,
                }
              }
              strokeWidth="0.5"
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;
